重新组织数据集存储路径

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "root_path = 'data'\n",
-    "data_path = os.path.join(root_path, 'data')\n",
+    "root_path = 'data/original/test/'\n",
+    "data_path = os.path.join(root_path, 'text')\n",
     "label_path = os.path.join(root_path, 'label')"
    ]
   },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +45,12 @@
     "    'ID': str,\n",
     "    'Text': str\n",
     "})\n",
-    "data.to_csv('data.csv', index=False)"
+    "# data.to_csv('data.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "2514  2514  QQ交流群：229215757人人网：http://www.renren.com/27114..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,12 +176,12 @@
     "        labels.append(label)\n",
     "\n",
     "labels = pd.concat(labels)\n",
-    "labels.to_csv('label.csv', index=False)"
+    "# labels.to_csv('label.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "1  2514  organization     91     95      平均律乐队"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        " 'I-vx']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        " 'I-vx': 28}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "2514  [O, O, O, O, O, O, B-QQ, I-QQ, I-QQ, I-QQ, I-Q...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
        "False"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "2514  [O, O, O, O, O, O, B-QQ, I-QQ, I-QQ, I-QQ, I-Q...  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
        "2514  [0, 0, 0, 0, 0, 0, 25, 26, 26, 26, 26, 26, 26,...  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
        "2514  [0, 0, 0, 0, 0, 0, 25, 26, 26, 26, 26, 26, 26,...  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,16 +881,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('processed/data.csv', index=False)"
+    "data.to_csv(os.path.join('data', 'processed', 'data.csv'), index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1114,11 +1114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "categories_df.to_csv('processed/categories.csv', index=False)"
+    "categories_df.to_csv(os.path.join('data', 'processed', 'categories.csv'), index=False)"
    ]
   }
  ],
