添加训练模型脚本

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "root_path = 'data/original/test/'\n",
+    "root_path = 'data/original/train'\n",
     "data_path = os.path.join(root_path, 'text')\n",
     "label_path = os.path.join(root_path, 'label')"
    ]
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2515\n"
+      "3956\n"
      ]
     },
     {
@@ -109,29 +109,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2510</th>\n",
-       "      <td>2510</td>\n",
-       "      <td>“这起案件之所以近半年才暴露，完全是因李云飞钻了信用卡使用过程中的空子。”民警告诉记者，sk...</td>\n",
+       "      <th>3951</th>\n",
+       "      <td>3951</td>\n",
+       "      <td>来自土耳其的加拉塔萨雷上上赛季主场输给埃因霍温，随后战胜利物浦。本场看好3/0打出。</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2511</th>\n",
-       "      <td>2511</td>\n",
-       "      <td>《前线任务》系列是1995年发源于超级任天堂的机器人战略游戏，游戏由THQ旗下的KAOSST...</td>\n",
+       "      <th>3952</th>\n",
+       "      <td>3952</td>\n",
+       "      <td>何以如此？据笔者了解，自从中国银行业协会提出“银行受理客户7折房贷利率优惠申请不得搭售其他金...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2512</th>\n",
-       "      <td>2512</td>\n",
-       "      <td>还能在著名的雅拉河中坐游船感受南半球最大的港口风光哦。</td>\n",
+       "      <th>3953</th>\n",
+       "      <td>3953</td>\n",
+       "      <td>台湾《大魔竞》总冠军，湖南卫视金牌魔术团金牌魔术师，央视《时尚中国》时尚金牌魔术师＜我要上春...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2513</th>\n",
-       "      <td>2513</td>\n",
-       "      <td>馬來西亞、中國演員、藝人.香港，馬來西亞及内地工作請私信本人作品：马来西亚-情牵南苑（玉兰，...</td>\n",
+       "      <th>3954</th>\n",
+       "      <td>3954</td>\n",
+       "      <td>小爽是一名基层女民警，与男同志一样参加值班执勤，管理社区，巡逻破案与治安防范，快乐工作幸福生...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2514</th>\n",
-       "      <td>2514</td>\n",
-       "      <td>QQ交流群：229215757人人网：http://www.renren.com/27114...</td>\n",
+       "      <th>3955</th>\n",
+       "      <td>3955</td>\n",
+       "      <td>上赛季德甲主队3胜1平。博天堂平赔高达3.30，两队战和可能最小。</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -139,14 +139,14 @@
       ],
       "text/plain": [
        "        ID                                               Text\n",
-       "2510  2510  “这起案件之所以近半年才暴露，完全是因李云飞钻了信用卡使用过程中的空子。”民警告诉记者，sk...\n",
-       "2511  2511  《前线任务》系列是1995年发源于超级任天堂的机器人战略游戏，游戏由THQ旗下的KAOSST...\n",
-       "2512  2512                        还能在著名的雅拉河中坐游船感受南半球最大的港口风光哦。\n",
-       "2513  2513  馬來西亞、中國演員、藝人.香港，馬來西亞及内地工作請私信本人作品：马来西亚-情牵南苑（玉兰，...\n",
-       "2514  2514  QQ交流群：229215757人人网：http://www.renren.com/27114..."
+       "3951  3951         来自土耳其的加拉塔萨雷上上赛季主场输给埃因霍温，随后战胜利物浦。本场看好3/0打出。\n",
+       "3952  3952  何以如此？据笔者了解，自从中国银行业协会提出“银行受理客户7折房贷利率优惠申请不得搭售其他金...\n",
+       "3953  3953  台湾《大魔竞》总冠军，湖南卫视金牌魔术团金牌魔术师，央视《时尚中国》时尚金牌魔术师＜我要上春...\n",
+       "3954  3954  小爽是一名基层女民警，与男同志一样参加值班执勤，管理社区，巡逻破案与治安防范，快乐工作幸福生...\n",
+       "3955  3955                  上赛季德甲主队3胜1平。博天堂平赔高达3.30，两队战和可能最小。"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,6 +1120,13 @@
    "source": [
     "categories_df.to_csv(os.path.join('data', 'processed', 'categories.csv'), index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
