--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,36 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import pipeline\n",
+    "from transformers import AutoModelForTokenClassification, AutoTokenizer, pipeline\n",
     "\n",
-    "pipe = pipeline(\"token-classification\", model=\"gyr66/bert-base-chinese-finetuned-ner\", device=1)"
+    "\n",
+    "model = AutoModelForTokenClassification.from_pretrained(\"RoBERTa-ext-large-chinese-finetuned-ner\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"RoBERTa-ext-large-chinese-finetuned-ner\", model_max_length=512)\n",
+    "pipe = pipeline(\"token-classification\", model=model, tokenizer=tokenizer, device=1, aggregation_strategy='simple')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def transform_output(entities, _id):\n",
     "    result = []\n",
-    "    i = 0\n",
-    "    while i < len(entities):\n",
-    "        entity = entities[i]\n",
-    "        # Remove the 'B-' or 'I-' prefix from the category\n",
-    "        category = entity['entity'][2:]\n",
-    "        word = entity['word']\n",
+    "    for entity in entities:\n",
+    "        category = entity['entity_group']\n",
+    "        word = entity['word'].replace(' ', '')\n",
     "        start = entity['start']\n",
-    "        end = entity['end'] - 1  # Subtract 1 from the end position\n",
-    "        # Check if there are 'I-' entities following this 'B-' entity\n",
-    "        while i + 1 < len(entities) and entities[i + 1]['entity'].startswith('I-'):\n",
-    "            i += 1\n",
-    "            word += entities[i]['word']\n",
-    "            end = entities[i]['end'] - 1  # Subtract 1 from the end position\n",
+    "        end = entity['end'] - 1\n",
     "        result.append({\n",
     "            'ID': _id,\n",
     "            'Category': category,\n",
@@ -39,13 +34,12 @@
     "            'Pos_e': end,\n",
     "            'Privacy': word\n",
     "        })\n",
-    "        i += 1\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,24 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6af5c1f45a354789ab8d0d2f010c2541",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3956 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "text_list = []\n",
     "id_list = []\n",
@@ -88,6 +67,102 @@
     "    res.extend(output)\n",
     "df = pd.DataFrame(res)\n",
     "df.to_csv('data/original/test/predict.csv', encoding='utf-8', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Pos_b</th>\n",
+       "      <th>Pos_e</th>\n",
+       "      <th>Privacy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>book</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>《别告诉我你懂ppt》</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>book</td>\n",
+       "      <td>11</td>\n",
+       "      <td>23</td>\n",
+       "      <td>《不懂项目管理还敢拼职场》</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>book</td>\n",
+       "      <td>24</td>\n",
+       "      <td>31</td>\n",
+       "      <td>《让营销更性感》</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>position</td>\n",
+       "      <td>33</td>\n",
+       "      <td>34</td>\n",
+       "      <td>作者</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>name</td>\n",
+       "      <td>35</td>\n",
+       "      <td>36</td>\n",
+       "      <td>李治</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ID  Category  Pos_b  Pos_e        Privacy\n",
+       "0  0      book      0     10    《别告诉我你懂ppt》\n",
+       "1  0      book     11     23  《不懂项目管理还敢拼职场》\n",
+       "2  0      book     24     31       《让营销更性感》\n",
+       "3  0  position     33     34             作者\n",
+       "4  0      name     35     36             李治"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(5)"
    ]
   },
   {
