添加LoRA训练脚本

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,21 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import AutoModelForTokenClassification, AutoTokenizer, pipeline\n",
+    "from transformers.pipelines import PIPELINE_REGISTRY, TokenClassificationArgumentHandler, TokenClassificationPipeline\n",
+    "from transformers.models.bert.tokenization_bert import BasicTokenizer\n",
     "\n",
+    "class BertCRFTokenClassificationPipeline(TokenClassificationPipeline):\n",
+    "  def __init__(self, args_parser=TokenClassificationArgumentHandler(), *args, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "        self.check_model_type([\"BERT_CRF_ForTokenClassification\"])\n",
     "\n",
-    "model = AutoModelForTokenClassification.from_pretrained(\"RoBERTa-ext-large-chinese-finetuned-ner\")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"RoBERTa-ext-large-chinese-finetuned-ner\", model_max_length=512)\n",
-    "pipe = pipeline(\"token-classification\", model=model, tokenizer=tokenizer, device=1, aggregation_strategy='simple')"
+    "        self._basic_tokenizer = BasicTokenizer(do_lower_case=False)\n",
+    "        self._args_parser = args_parser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "token-classification-with-crf is already registered. Overwriting pipeline for task token-classification-with-crf...\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers.pipelines import PIPELINE_REGISTRY, TokenClassificationPipeline\n",
+    "from model import BERT_CRF_ForTokenClassification\n",
+    "\n",
+    "PIPELINE_REGISTRY.register_pipeline(\n",
+    "    \"token-classification-with-crf\",\n",
+    "    pipeline_class=BertCRFTokenClassificationPipeline,\n",
+    "    pt_model=BERT_CRF_ForTokenClassification,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoModelForTokenClassification, AutoTokenizer, pipeline\n",
+    "from model import BERT_CRF_ForTokenClassification\n",
+    "\n",
+    "model = BERT_CRF_ForTokenClassification.from_pretrained(\"RoBERTa-ext-large-chinese-finetuned-crf-ner/checkpoint-288/\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"RoBERTa-ext-large-chinese-finetuned-crf-ner/checkpoint-288/\", model_max_length=512)\n",
+    "pipe = pipeline(\"token-classification-with-crf\", model=model, tokenizer=tokenizer, aggregation_strategy='simple')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +198,7 @@
        "4  0      name     35     36             李治"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
