--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,63 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from transformers.pipelines import PIPELINE_REGISTRY, TokenClassificationArgumentHandler, TokenClassificationPipeline\n",
-    "from transformers.models.bert.tokenization_bert import BasicTokenizer\n",
-    "\n",
-    "class BertCRFTokenClassificationPipeline(TokenClassificationPipeline):\n",
-    "  def __init__(self, args_parser=TokenClassificationArgumentHandler(), *args, **kwargs):\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "        self.check_model_type([\"BERT_CRF_ForTokenClassification\"])\n",
-    "\n",
-    "        self._basic_tokenizer = BasicTokenizer(do_lower_case=False)\n",
-    "        self._args_parser = args_parser"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "token-classification-with-crf is already registered. Overwriting pipeline for task token-classification-with-crf...\n"
+      "tokenizer_config.json: 100%|██████████| 1.25k/1.25k [00:00<00:00, 2.38MB/s]\n",
+      "vocab.txt: 100%|██████████| 110k/110k [00:00<00:00, 617kB/s]\n",
+      "tokenizer.json: 100%|██████████| 439k/439k [00:00<00:00, 1.64MB/s]\n",
+      "special_tokens_map.json: 100%|██████████| 695/695 [00:00<00:00, 1.58MB/s]\n",
+      "config.json: 100%|██████████| 2.24k/2.24k [00:00<00:00, 5.35MB/s]\n"
      ]
     }
    ],
    "source": [
-    "from transformers.pipelines import PIPELINE_REGISTRY, TokenClassificationPipeline\n",
-    "from model import BERT_CRF_ForTokenClassification\n",
+    "from transformers import AutoTokenizer, AutoModelForTokenClassification, pipeline\n",
     "\n",
-    "PIPELINE_REGISTRY.register_pipeline(\n",
-    "    \"token-classification-with-crf\",\n",
-    "    pipeline_class=BertCRFTokenClassificationPipeline,\n",
-    "    pt_model=BERT_CRF_ForTokenClassification,\n",
-    ")"
+    "tokenizer = AutoTokenizer.from_pretrained(\"gyr66/RoBERTa-ext-large-crf-chinese-finetuned-ner\", model_max_length=512)\n",
+    "model = AutoModelForTokenClassification.from_pretrained(\"gyr66/RoBERTa-ext-large-crf-chinese-finetuned-ner\")\n",
+    "pipe = pipeline(\"token-classification\", model=model, tokenizer=tokenizer, trust_remote_code=True, aggregation_strategy='simple', device=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'entity_group': 'name',\n",
+       "  'score': 0.088490665,\n",
+       "  'word': '郭 怡 然',\n",
+       "  'start': 2,\n",
+       "  'end': 5},\n",
+       " {'entity_group': 'organization',\n",
+       "  'score': 0.088490665,\n",
+       "  'word': '中 国 科 学 院',\n",
+       "  'start': 8,\n",
+       "  'end': 13}]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from transformers import AutoModelForTokenClassification, AutoTokenizer, pipeline\n",
-    "from model import BERT_CRF_ForTokenClassification\n",
-    "\n",
-    "model = BERT_CRF_ForTokenClassification.from_pretrained(\"RoBERTa-ext-large-chinese-finetuned-crf-ner/checkpoint-288/\")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"RoBERTa-ext-large-chinese-finetuned-crf-ner/checkpoint-288/\", model_max_length=512)\n",
-    "pipe = pipeline(\"token-classification-with-crf\", model=model, tokenizer=tokenizer, aggregation_strategy='simple')"
+    "pipe(\"我叫郭怡然，我在中国科学院大学读书。\", aggregation_strategy='simple')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +101,7 @@
     "        text = f.read()\n",
     "    id_list.append(filename.split('.')[0])\n",
     "    text_list.append(text)\n",
-    "output_list = pipe(text_list, batch_size=64)\n",
+    "output_list = pipe(text_list, batch_size=128)\n",
     "for _id, output in zip(id_list, output_list):\n",
     "    output = transform_output(output, _id)\n",
     "    res.extend(output)\n",
@@ -113,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +196,7 @@
        "4  0      name     35     36             李治"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4,
   "vscode": {
