--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,56 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tokenizer_config.json: 100%|██████████| 1.25k/1.25k [00:00<00:00, 2.38MB/s]\n",
-      "vocab.txt: 100%|██████████| 110k/110k [00:00<00:00, 617kB/s]\n",
-      "tokenizer.json: 100%|██████████| 439k/439k [00:00<00:00, 1.64MB/s]\n",
-      "special_tokens_map.json: 100%|██████████| 695/695 [00:00<00:00, 1.58MB/s]\n",
-      "config.json: 100%|██████████| 2.24k/2.24k [00:00<00:00, 5.35MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForTokenClassification, pipeline\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"gyr66/RoBERTa-ext-large-crf-chinese-finetuned-ner\", model_max_length=512)\n",
-    "model = AutoModelForTokenClassification.from_pretrained(\"gyr66/RoBERTa-ext-large-crf-chinese-finetuned-ner\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"gyr66/Ernie-3.0-large-chinese-finetuned-ner\", model_max_length=512)\n",
+    "model = AutoModelForTokenClassification.from_pretrained(\"gyr66/Ernie-3.0-large-chinese-finetuned-ner\")\n",
     "pipe = pipeline(\"token-classification\", model=model, tokenizer=tokenizer, trust_remote_code=True, aggregation_strategy='simple', device=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'entity_group': 'name',\n",
-       "  'score': 0.088490665,\n",
-       "  'word': '郭 怡 然',\n",
-       "  'start': 2,\n",
-       "  'end': 5},\n",
-       " {'entity_group': 'organization',\n",
-       "  'score': 0.088490665,\n",
-       "  'word': '中 国 科 学 院',\n",
-       "  'start': 8,\n",
-       "  'end': 13}]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pipe(\"我叫郭怡然，我在中国科学院大学读书。\", aggregation_strategy='simple')"
+    "pipe(\"我叫张三，我在中国科学院大学读书。\", aggregation_strategy='simple')"
    ]
   },
   {
